@@ -1,21 +1,21 @@
 /*
  * Copyright (c) 2009 Sun Microsystems, Inc. All Rights Reserved.
- * 
+ *
  * Redistribution and use in source and binary forms, with or without
  * modification, are permitted provided that the following conditions are
  * met:
- * 
+ *
  * - Redistribution of source code must retain the above copyright
  *   notice, this list of conditions and the following disclaimer.
- * 
+ *
  * - Redistribution in binary form must reproduce the above copyright
  *   notice, this list of conditions and the following disclaimer in the
  *   documentation and/or other materials provided with the distribution.
- * 
+ *
  * Neither the name of Sun Microsystems, Inc. or the names of
  * contributors may be used to endorse or promote products derived from
  * this software without specific prior written permission.
- * 
+ *
  * This software is provided "AS IS," without a warranty of any kind. ALL
  * EXPRESS OR IMPLIED CONDITIONS, REPRESENTATIONS AND WARRANTIES,
  * INCLUDING ANY IMPLIED WARRANTY OF MERCHANTABILITY, FITNESS FOR A
@@ -28,7 +28,7 @@
  * DAMAGES, HOWEVER CAUSED AND REGARDLESS OF THE THEORY OF LIABILITY,
  * ARISING OUT OF THE USE OF OR INABILITY TO USE THIS SOFTWARE, EVEN IF
  * SUN HAS BEEN ADVISED OF THE POSSIBILITY OF SUCH DAMAGES.
- * 
+ *
  */
 
 package com.jogamp.opengl.util.glsl;
@@ -37,437 +37,367 @@ import java.io.PrintStream;
 import java.nio.*;
 import java.util.*;
 
-import javax.media.opengl.*;
+import com.jogamp.opengl.*;
 
 import com.jogamp.common.nio.Buffers;
+import com.jogamp.opengl.GLExtensions;
 
 public class ShaderUtil {
-    static abstract class Impl {
-        public abstract String getShaderInfoLog(GL gl, int shaderObj);
-        public abstract String getProgramInfoLog(GL gl, int programObj);
-        public abstract boolean isShaderStatusValid(GL gl, int shaderObj, int name);
-        public abstract boolean isShaderStatusValid(GL gl, int shaderObj, int name, PrintStream verboseOut);
-        public abstract boolean isShaderStatusValid(GL gl, IntBuffer shaders, int name);
-        public abstract boolean isShaderStatusValid(GL gl, IntBuffer shaders, int name, PrintStream verboseOut);
-        public abstract boolean isProgramStatusValid(GL gl, int programObj, int name);
-        public abstract boolean isProgramValid(GL gl, int programObj);
-        public abstract boolean isProgramValid(GL gl, int programObj, PrintStream verboseOut);
-        public abstract void createShader(GL gl, int type, IntBuffer shaders);
-        public abstract Set<Integer> getShaderBinaryFormats(GL gl);
-        public abstract boolean isShaderCompilerAvailable(GL gl);
-        public abstract void shaderSource(GL gl, int shader, java.lang.String[] source);
-        public abstract void shaderSource(GL gl, IntBuffer shaders, java.lang.String[][] sources);
-        public abstract void shaderBinary(GL gl, IntBuffer shaders, int binFormat, java.nio.Buffer bin);
-        public abstract void compileShader(GL gl, IntBuffer shaders);
-        public abstract void attachShader(GL gl, int program, IntBuffer shaders);
-        public abstract void detachShader(GL gl, int program, IntBuffer shaders);
-        public abstract void deleteShader(GL gl, IntBuffer shaders);
+    public static String getShaderInfoLog(final GL _gl, final int shaderObj) {
+        final GL2ES2 gl = _gl.getGL2ES2();
+        final int[] infoLogLength=new int[1];
+        gl.glGetShaderiv(shaderObj, GL2ES2.GL_INFO_LOG_LENGTH, infoLogLength, 0);
 
-        public abstract boolean createAndLoadShader(GL gl, IntBuffer shader, int shaderType,
-                                                    int binFormat, java.nio.Buffer bin,
-                                                    PrintStream verboseOut);
+        if(infoLogLength[0]==0) {
+            return "(no info log)";
+        }
+        final int[] charsWritten=new int[1];
+        final byte[] infoLogBytes = new byte[infoLogLength[0]];
+        gl.glGetShaderInfoLog(shaderObj, infoLogLength[0], charsWritten, 0, infoLogBytes, 0);
 
-        public abstract boolean createAndCompileShader(GL gl, IntBuffer shader, int shaderType,
-                                                       java.lang.String[][] sources, 
-                                                       PrintStream verboseOut);
+        return new String(infoLogBytes, 0, charsWritten[0]);
     }
 
-    static class GL2ES2Impl extends Impl {
-        public String getShaderInfoLog(GL _gl, int shaderObj) {
-            GL2ES2 gl = _gl.getGL2ES2();
-            int[] infoLogLength=new int[1];
-            gl.glGetShaderiv(shaderObj, GL2ES2.GL_INFO_LOG_LENGTH, infoLogLength, 0);
+    public static String getProgramInfoLog(final GL _gl, final int programObj) {
+        final GL2ES2 gl = _gl.getGL2ES2();
+        final int[] infoLogLength=new int[1];
+        gl.glGetProgramiv(programObj, GL2ES2.GL_INFO_LOG_LENGTH, infoLogLength, 0);
 
-            if(infoLogLength[0]==0) {
-                return "(no info log)";
+        if(infoLogLength[0]==0) {
+            return "(no info log)";
+        }
+        final int[] charsWritten=new int[1];
+        final byte[] infoLogBytes = new byte[infoLogLength[0]];
+        gl.glGetProgramInfoLog(programObj, infoLogLength[0], charsWritten, 0, infoLogBytes, 0);
+
+        return new String(infoLogBytes, 0, charsWritten[0]);
+    }
+
+    public static boolean isShaderStatusValid(final GL _gl, final int shaderObj, final int name, final PrintStream verboseOut) {
+        final GL2ES2 gl = _gl.getGL2ES2();
+        final int[] ires = new int[1];
+        gl.glGetShaderiv(shaderObj, name, ires, 0);
+
+        final boolean res = ires[0]==1;
+        if(!res && null!=verboseOut) {
+            verboseOut.println("Shader status invalid: "+ getShaderInfoLog(gl, shaderObj));
+        }
+        return res;
+    }
+
+    public static boolean isShaderStatusValid(final GL _gl, final IntBuffer shaders, final int name, final PrintStream verboseOut) {
+        boolean res = true;
+        for (int i = shaders.position(); i < shaders.limit(); i++) {
+            res = isShaderStatusValid(_gl, shaders.get(i), name, verboseOut) && res;
+        }
+        return res;
+    }
+
+    public static boolean isProgramStatusValid(final GL _gl, final int programObj, final int name) {
+        final GL2ES2 gl = _gl.getGL2ES2();
+        final int[] ires = new int[1];
+        gl.glGetProgramiv(programObj, name, ires, 0);
+
+        return ires[0]==1;
+    }
+
+    public static boolean isProgramLinkStatusValid(final GL _gl, final int programObj, final PrintStream verboseOut) {
+        final GL2ES2 gl = _gl.getGL2ES2();
+        if(!gl.glIsProgram(programObj)) {
+            if(null!=verboseOut) {
+                verboseOut.println("Program name invalid: "+programObj);
             }
-            int[] charsWritten=new int[1];
-            byte[] infoLogBytes = new byte[infoLogLength[0]];
-            gl.glGetShaderInfoLog(shaderObj, infoLogLength[0], charsWritten, 0, infoLogBytes, 0);
-
-            return new String(infoLogBytes, 0, charsWritten[0]);
+            return false;
         }
-
-        public String getProgramInfoLog(GL _gl, int programObj) {
-            GL2ES2 gl = _gl.getGL2ES2();
-            int[] infoLogLength=new int[1];
-            gl.glGetProgramiv(programObj, GL2ES2.GL_INFO_LOG_LENGTH, infoLogLength, 0);
-
-            if(infoLogLength[0]==0) {
-                return "(no info log)";
+        if(!isProgramStatusValid(gl, programObj, GL2ES2.GL_LINK_STATUS)) {
+            if(null!=verboseOut) {
+                verboseOut.println("Program link failed: "+programObj+"\n\t"+ getProgramInfoLog(gl, programObj));
             }
-            int[] charsWritten=new int[1];
-            byte[] infoLogBytes = new byte[infoLogLength[0]];
-            gl.glGetProgramInfoLog(programObj, infoLogLength[0], charsWritten, 0, infoLogBytes, 0);
-
-            return new String(infoLogBytes, 0, charsWritten[0]);
+            return false;
         }
+        return true;
+    }
 
-        public boolean isShaderStatusValid(GL _gl, int shaderObj, int name) {
-            return isShaderStatusValid(_gl, shaderObj, name, null);
-        }
-
-        public boolean isShaderStatusValid(GL _gl, int shaderObj, int name, PrintStream verboseOut) {
-            GL2ES2 gl = _gl.getGL2ES2();
-            int[] ires = new int[1];
-            gl.glGetShaderiv(shaderObj, name, ires, 0);
-
-            boolean res = ires[0]==1;
-            if(!res && null!=verboseOut) {
-                verboseOut.println("Shader status invalid: "+ getShaderInfoLog(gl, shaderObj));
+    /**
+     * Performs {@link GL2ES2#glValidateProgram(int)}
+     * <p>
+     * One shall only call this method while debugging and only if all required
+     * resources by the shader are set.
+     * </p>
+     * <p>
+     * Note: It is possible that a working shader program will fail validation.
+     * This has been experienced on NVidia APX2500 and Tegra2.
+     * </p>
+     * @see GL2ES2#glValidateProgram(int)
+     **/
+    public static boolean isProgramExecStatusValid(final GL _gl, final int programObj, final PrintStream verboseOut) {
+        final GL2ES2 gl = _gl.getGL2ES2();
+        gl.glValidateProgram(programObj);
+        if(!isProgramStatusValid(gl, programObj, GL2ES2.GL_VALIDATE_STATUS)) {
+            if(null!=verboseOut) {
+                verboseOut.println("Program validation failed: "+programObj+"\n\t"+ getProgramInfoLog(gl, programObj));
             }
-            return res;
+            return false;
         }
+        return true;
+    }
 
-        public boolean isShaderStatusValid(GL _gl, IntBuffer shaders, int name) {
-            return isShaderStatusValid(_gl, shaders, name, null);
+    public static void createShader(final GL _gl, final int type, final IntBuffer shaders) {
+        final GL2ES2 gl = _gl.getGL2ES2();
+        for (int i = shaders.position(); i < shaders.limit(); i++) {
+            shaders.put(i, gl.glCreateShader(type));
         }
+    }
 
-        public boolean isShaderStatusValid(GL _gl, IntBuffer shaders, int name, PrintStream verboseOut) {
-            boolean res = true;
-            for (int i = shaders.position(); i < shaders.limit(); i++) {
-                res = isShaderStatusValid(_gl, shaders.get(i), name, verboseOut) && res;
-            }
-            return res;
-        }
-
-        public boolean isProgramStatusValid(GL _gl, int programObj, int name) {
-            GL2ES2 gl = _gl.getGL2ES2();
-            int[] ires = new int[1];
-            gl.glGetProgramiv(programObj, name, ires, 0);
-
-            return ires[0]==1;
-        }
-
-        public boolean isProgramValid(GL _gl, int programObj) {
-            return isProgramValid(_gl, programObj, null);
-        }
-
-        public boolean isProgramValid(GL _gl, int programObj, PrintStream verboseOut) {
-            GL2ES2 gl = _gl.getGL2ES2();
-            if(!gl.glIsProgram(programObj)) {
-                if(null!=verboseOut) {
-                    verboseOut.println("Program name invalid: "+programObj);
-                }
-                return false;
-            }
-            if(!isProgramStatusValid(gl, programObj, GL2ES2.GL_LINK_STATUS)) {
-                if(null!=verboseOut) {
-                    verboseOut.println("Program link failed: "+programObj+"\n\t"+ getProgramInfoLog(gl, programObj));
-                }
-                return false;
-            }
-            if ( !gl.isGLES2() || isShaderCompilerAvailable(gl) ) {
-                // failed on APX2500 (ES2.0, no compiler) for valid programs
-                gl.glValidateProgram(programObj);
-                if(!isProgramStatusValid(gl, programObj, GL2ES2.GL_VALIDATE_STATUS)) {
-                    if(null!=verboseOut) {
-                        verboseOut.println("Program validation failed: "+programObj+"\n\t"+ getProgramInfoLog(gl, programObj));
-                    }
-                    return false;
-                }
-            }
-            return true;
-        }
-
-        public void createShader(GL _gl, int type, IntBuffer shaders) {
-            GL2ES2 gl = _gl.getGL2ES2();
-            for (int i = shaders.position(); i < shaders.limit(); i++) {
-                shaders.put(i, gl.glCreateShader(type));
-            }
-        }
-
-        private Boolean shaderCompilerAvailable = null;
-        private Set<Integer> shaderBinaryFormats = null;
-
-        public Set<Integer> getShaderBinaryFormats(GL _gl) {
-            GL2ES2 gl = _gl.getGL2ES2();
-            if(null==shaderBinaryFormats) {
-                gl.getContext().validateCurrent();
-
-                int[] param = new int[1];
-                shaderBinaryFormats = new HashSet<Integer>();
-
-                if (gl.isGLES2Compatible()) {
+    /**
+     * If supported, queries the natively supported shader binary formats using
+     * {@link GL2ES2#GL_NUM_SHADER_BINARY_FORMATS} and {@link GL2ES2#GL_SHADER_BINARY_FORMATS}
+     * via {@link GL2ES2#glGetIntegerv(int, int[], int)}.
+     */
+    public static Set<Integer> getShaderBinaryFormats(final GL _gl) {
+        final GL2ES2 gl = _gl.getGL2ES2();
+        final ProfileInformation info = getProfileInformation(gl);
+        if(null == info.shaderBinaryFormats) {
+            info.shaderBinaryFormats = new HashSet<Integer>();
+            if (gl.isGLES2Compatible()) {
+                try {
+                    final int[] param = new int[1];
                     gl.glGetIntegerv(GL2ES2.GL_NUM_SHADER_BINARY_FORMATS, param, 0);
-                    int numFormats = param[0];
+                    final int err = gl.glGetError();
+                    final int numFormats = GL.GL_NO_ERROR == err ? param[0] : 0;
                     if(numFormats>0) {
-                        int[] formats = new int[numFormats];
+                        final int[] formats = new int[numFormats];
                         gl.glGetIntegerv(GL2ES2.GL_SHADER_BINARY_FORMATS, formats, 0);
                         for(int i=0; i<numFormats; i++) {
-                            shaderBinaryFormats.add(new Integer(formats[i]));
+                            info.shaderBinaryFormats.add(Integer.valueOf(formats[i]));
                         }
                     }
+                } catch (final GLException gle) {
+                    System.err.println("Caught exception on thread "+Thread.currentThread().getName());
+                    gle.printStackTrace();
                 }
             }
-            return shaderBinaryFormats;
         }
+        return info.shaderBinaryFormats;
+    }
 
-
-        public boolean isShaderCompilerAvailable(GL _gl) {
-            GL2ES2 gl = _gl.getGL2ES2();
-            if(null==shaderCompilerAvailable) {
-                gl.getContext().validateCurrent();
-                Set<Integer> bfs = getShaderBinaryFormats(gl);
-                if(gl.isGLES2()) {
-                    byte[] param = new byte[1];
+    /** Returns true if a hader compiler is available, otherwise false. */
+    public static boolean isShaderCompilerAvailable(final GL _gl) {
+        final GL2ES2 gl = _gl.getGL2ES2();
+        final ProfileInformation info = getProfileInformation(gl);
+        if(null==info.shaderCompilerAvailable) {
+            if(gl.isGLES2()) {
+                boolean queryOK = false;
+                try {
+                    final byte[] param = new byte[1];
                     gl.glGetBooleanv(GL2ES2.GL_SHADER_COMPILER, param, 0);
-                    boolean v = param[0]!=(byte)0x00;
-                    if(!v && bfs.size()==0) {
-                        // no supported binary formats, hence a compiler must be available!
-                        v = true;
+                    final int err = gl.glGetError();
+                    boolean v = GL.GL_NO_ERROR == err && param[0]!=(byte)0x00;
+                    if(!v) {
+                        final Set<Integer> bfs = getShaderBinaryFormats(gl);
+                        if(bfs.size()==0) {
+                            // no supported binary formats, hence a compiler must be available!
+                            v = true;
+                        }
                     }
-                    shaderCompilerAvailable = new Boolean(v);
-                } else if( gl.isGL2ES2() ) {
-                    shaderCompilerAvailable = new Boolean(true);
+                    info.shaderCompilerAvailable = Boolean.valueOf(v);
+                    queryOK = true;
+                } catch (final GLException gle) {
+                    System.err.println("Caught exception on thread "+Thread.currentThread().getName());
+                    gle.printStackTrace();
+                }
+                if(!queryOK) {
+                    info.shaderCompilerAvailable = Boolean.valueOf(true);
+                }
+            } else if( gl.isGL2ES2() ) {
+                info.shaderCompilerAvailable = new Boolean(true);
+            } else {
+                throw new GLException("Invalid OpenGL profile");
+            }
+        }
+        return info.shaderCompilerAvailable.booleanValue();
+    }
+
+    /** Returns true if GeometryShader is supported, i.e. whether GLContext is &ge; 3.2 or ARB_geometry_shader4 extension is available. */
+    public static boolean isGeometryShaderSupported(final GL _gl) {
+      final GLContext ctx = _gl.getContext();
+      return ctx.getGLVersionNumber().compareTo(GLContext.Version3_2) >= 0 ||
+             ctx.isExtensionAvailable(GLExtensions.ARB_geometry_shader4);
+    }
+
+    public static void shaderSource(final GL _gl, final int shader, final CharSequence[] source)
+    {
+        final GL2ES2 gl = _gl.getGL2ES2();
+        if(!isShaderCompilerAvailable(_gl)) {
+            throw new GLException("No compiler is available");
+        }
+
+        final int count = (null!=source)?source.length:0;
+        if(count==0) {
+            throw new GLException("No sources specified");
+        }
+
+        final IntBuffer lengths = Buffers.newDirectIntBuffer(count);
+        for(int i=0; i<count; i++) {
+            lengths.put(i, source[i].length());
+        }
+        if(source instanceof String[]) {
+            // rare case ..
+            gl.glShaderSource(shader, count, (String[])source, lengths);
+        } else {
+            final String[] tmp = new String[source.length];
+            for(int i = source.length - 1; i>=0; i--) {
+                final CharSequence csq = source[i];
+                if(csq instanceof String) {
+                    // if ShaderCode.create(.. mutableStringBuilder == false )
+                    tmp[i] = (String) csq;
                 } else {
-                    throw new GLException("Invalid OpenGL profile");
+                    // if ShaderCode.create(.. mutableStringBuilder == true )
+                    tmp[i] = source[i].toString();
                 }
             }
-            return shaderCompilerAvailable.booleanValue();
+            gl.glShaderSource(shader, count, tmp, lengths);
+        }
+    }
+
+    public static void shaderSource(final GL _gl, final IntBuffer shaders, final CharSequence[][] sources)
+    {
+        final int sourceNum = (null!=sources)?sources.length:0;
+        final int shaderNum = (null!=shaders)?shaders.remaining():0;
+        if(shaderNum<=0 || sourceNum<=0 || shaderNum!=sourceNum) {
+            throw new GLException("Invalid number of shaders and/or sources: shaders="+
+                                  shaderNum+", sources="+sourceNum);
+        }
+        for(int i=0; i<sourceNum; i++) {
+            shaderSource(_gl, shaders.get(shaders.position() + i), sources[i]);
+        }
+    }
+
+    public static void shaderBinary(final GL _gl, final IntBuffer shaders, final int binFormat, final java.nio.Buffer bin)
+    {
+        final GL2ES2 gl = _gl.getGL2ES2();
+        if(getShaderBinaryFormats(gl).size()<=0) {
+            throw new GLException("No binary formats are supported");
         }
 
-        public void shaderSource(GL _gl, int shader, java.lang.String[] source)
-        {
-            GL2ES2 gl = _gl.getGL2ES2();
-            if(!isShaderCompilerAvailable(_gl)) {
-                throw new GLException("No compiler is available");
-            }
+        final int shaderNum = shaders.remaining();
+        if(shaderNum<=0) {
+            throw new GLException("No shaders specified");
+        }
+        if(null==bin) {
+            throw new GLException("Null shader binary");
+        }
+        final int binLength = bin.remaining();
+        if(0>=binLength) {
+            throw new GLException("Empty shader binary (remaining == 0)");
+        }
+        gl.glShaderBinary(shaderNum, shaders, binFormat, bin, binLength);
+    }
 
-            int count = (null!=source)?source.length:0;
-            if(count==0) {
-                throw new GLException("No sources specified");
-            }
+    public static void compileShader(final GL _gl, final IntBuffer shaders)
+    {
+        final GL2ES2 gl = _gl.getGL2ES2();
+        for (int i = shaders.position(); i < shaders.limit(); i++) {
+            gl.glCompileShader(shaders.get(i));
+        }
+    }
 
-            IntBuffer lengths = Buffers.newDirectIntBuffer(count);
-            for(int i=0; i<count; i++) {
-                lengths.put(i, source[i].length());
-            }
-            gl.glShaderSource(shader, count, source, lengths);
+    public static void attachShader(final GL _gl, final int program, final IntBuffer shaders)
+    {
+        final GL2ES2 gl = _gl.getGL2ES2();
+        for (int i = shaders.position(); i < shaders.limit(); i++) {
+            gl.glAttachShader(program, shaders.get(i));
+        }
+    }
+
+    public static void detachShader(final GL _gl, final int program, final IntBuffer shaders)
+    {
+        final GL2ES2 gl = _gl.getGL2ES2();
+        for (int i = shaders.position(); i < shaders.limit(); i++) {
+            gl.glDetachShader(program, shaders.get(i));
+        }
+    }
+
+    public static void deleteShader(final GL _gl, final IntBuffer shaders)
+    {
+        final GL2ES2 gl = _gl.getGL2ES2();
+        for (int i = shaders.position(); i < shaders.limit(); i++) {
+            gl.glDeleteShader(shaders.get(i));
+
+        }
+    }
+
+    public static boolean createAndLoadShader(final GL _gl, final IntBuffer shader, final int shaderType,
+                                              final int binFormat, final java.nio.Buffer bin,
+                                              final PrintStream verboseOut)
+    {
+        final GL2ES2 gl = _gl.getGL2ES2();
+        int err = gl.glGetError(); // flush previous errors ..
+        if(err!=GL.GL_NO_ERROR && null!=verboseOut) {
+            verboseOut.println("createAndLoadShader: Pre GL Error: 0x"+Integer.toHexString(err));
         }
 
-        public void shaderSource(GL _gl, IntBuffer shaders, java.lang.String[][] sources)
-        {
-            int sourceNum = (null!=sources)?sources.length:0;
-            int shaderNum = (null!=shaders)?shaders.remaining():0;
-            if(shaderNum<=0 || sourceNum<=0 || shaderNum!=sourceNum) {
-                throw new GLException("Invalid number of shaders and/or sources: shaders="+
-                                      shaderNum+", sources="+sourceNum);
-            }
-            for(int i=0; i<sourceNum; i++) {
-                shaderSource(_gl, shaders.get(shaders.position() + i), sources[i]);
-            }
+        createShader(gl, shaderType, shader);
+        err = gl.glGetError();
+        if(err!=GL.GL_NO_ERROR) {
+            throw new GLException("createAndLoadShader: CreateShader failed, GL Error: 0x"+Integer.toHexString(err));
         }
 
-        public void shaderBinary(GL _gl, IntBuffer shaders, int binFormat, java.nio.Buffer bin)
-        {
-            GL2ES2 gl = _gl.getGL2ES2();
-            if(getShaderBinaryFormats(gl).size()<=0) {
-                throw new GLException("No binary formats are supported");
-            }
+        shaderBinary(gl, shader, binFormat, bin);
 
-            int shaderNum = shaders.remaining();
-            if(shaderNum<=0) {
-                throw new GLException("No shaders specified");
-            }
-            if(null==bin) {
-                throw new GLException("Null shader binary");
-            }
-            int binLength = bin.remaining();
-            if(0>=binLength) {
-                throw new GLException("Empty shader binary (remaining == 0)");
-            }
-            gl.glShaderBinary(shaderNum, shaders, binFormat, bin, binLength);
+        err = gl.glGetError();
+        if(err!=GL.GL_NO_ERROR && null!=verboseOut) {
+            verboseOut.println("createAndLoadShader: ShaderBinary failed, GL Error: 0x"+Integer.toHexString(err));
+        }
+        return err == GL.GL_NO_ERROR;
+    }
+
+    public static boolean createAndCompileShader(final GL _gl, final IntBuffer shader, final int shaderType,
+                                                 final CharSequence[][] sources,
+                                                 final PrintStream verboseOut)
+    {
+        final GL2ES2 gl = _gl.getGL2ES2();
+        int err = gl.glGetError(); // flush previous errors ..
+        if(err!=GL.GL_NO_ERROR && null!=verboseOut) {
+            verboseOut.println("createAndCompileShader: Pre GL Error: 0x"+Integer.toHexString(err));
         }
 
-        public void compileShader(GL _gl, IntBuffer shaders)
-        {
-            GL2ES2 gl = _gl.getGL2ES2();
-            for (int i = shaders.position(); i < shaders.limit(); i++) {
-                gl.glCompileShader(shaders.get(i));
-            }
+        createShader(gl, shaderType, shader);
+        err = gl.glGetError();
+        if(err!=GL.GL_NO_ERROR) {
+            throw new GLException("createAndCompileShader: CreateShader failed, GL Error: 0x"+Integer.toHexString(err));
         }
 
-        public void attachShader(GL _gl, int program, IntBuffer shaders)
-        {
-            GL2ES2 gl = _gl.getGL2ES2();
-            for (int i = shaders.position(); i < shaders.limit(); i++) {
-                gl.glAttachShader(program, shaders.get(i));
-            }
+        shaderSource(gl, shader, sources);
+        err = gl.glGetError();
+        if(err!=GL.GL_NO_ERROR) {
+            throw new GLException("createAndCompileShader: ShaderSource failed, GL Error: 0x"+Integer.toHexString(err));
         }
 
-        public void detachShader(GL _gl, int program, IntBuffer shaders)
-        {
-            GL2ES2 gl = _gl.getGL2ES2();
-            for (int i = shaders.position(); i < shaders.limit(); i++) {
-                gl.glDetachShader(program, shaders.get(i));
-            }
+        compileShader(gl, shader);
+        err = gl.glGetError();
+        if(err!=GL.GL_NO_ERROR && null!=verboseOut) {
+            verboseOut.println("createAndCompileShader: CompileShader failed, GL Error: 0x"+Integer.toHexString(err));
         }
 
-        public void deleteShader(GL _gl, IntBuffer shaders)
-        {
-            GL2ES2 gl = _gl.getGL2ES2();
-            for (int i = shaders.position(); i < shaders.limit(); i++) {
-                gl.glDeleteShader(shaders.get(i));
+        return isShaderStatusValid(gl, shader, GL2ES2.GL_COMPILE_STATUS, verboseOut) && err == GL.GL_NO_ERROR;
+    }
 
-            }
+    private static final String implObjectKey = "com.jogamp.opengl.util.glsl.ShaderUtil" ;
+
+    private static class ProfileInformation {
+        Boolean shaderCompilerAvailable = null;
+        Set<Integer> shaderBinaryFormats = null;
+    }
+
+    private static ProfileInformation getProfileInformation(final GL gl) {
+        final GLContext context = gl.getContext();
+        context.validateCurrent();
+        ProfileInformation data = (ProfileInformation) context.getAttachedObject(implObjectKey);
+        if (data == null) {
+            data = new ProfileInformation();
+            context.attachObject(implObjectKey, data);
         }
-
-        public boolean createAndLoadShader(GL _gl, IntBuffer shader, int shaderType,
-                                           int binFormat, java.nio.Buffer bin,
-                                           PrintStream verboseOut)
-        {
-            GL2ES2 gl = _gl.getGL2ES2();
-            int err = gl.glGetError(); // flush previous errors ..
-            if(err!=GL.GL_NO_ERROR && null!=verboseOut) {
-                verboseOut.println("createAndLoadShader: Pre GL Error: 0x"+Integer.toHexString(err));
-            }
-
-            createShader(gl, shaderType, shader);
-            err = gl.glGetError(); 
-            if(err!=GL.GL_NO_ERROR) {
-                throw new GLException("createAndLoadShader: CreateShader failed, GL Error: 0x"+Integer.toHexString(err));
-            }
-
-            shaderBinary(gl, shader, binFormat, bin);
-
-            err = gl.glGetError();
-            if(err!=GL.GL_NO_ERROR && null!=verboseOut) {
-                verboseOut.println("createAndLoadShader: ShaderBinary failed, GL Error: 0x"+Integer.toHexString(err));
-            }
-            return err == GL.GL_NO_ERROR;
-        }
-
-        public boolean createAndCompileShader(GL _gl, IntBuffer shader, int shaderType,
-                                              java.lang.String[][] sources, 
-                                              PrintStream verboseOut)
-        {
-            GL2ES2 gl = _gl.getGL2ES2();
-            int err = gl.glGetError(); // flush previous errors ..
-            if(err!=GL.GL_NO_ERROR && null!=verboseOut) {
-                verboseOut.println("createAndCompileShader: Pre GL Error: 0x"+Integer.toHexString(err));
-            }
-
-            createShader(gl, shaderType, shader);
-            err = gl.glGetError(); 
-            if(err!=GL.GL_NO_ERROR) {
-                throw new GLException("createAndCompileShader: CreateShader failed, GL Error: 0x"+Integer.toHexString(err));
-            }
-
-            shaderSource(gl, shader, sources);
-            err = gl.glGetError(); 
-            if(err!=GL.GL_NO_ERROR) {
-                throw new GLException("createAndCompileShader: ShaderSource failed, GL Error: 0x"+Integer.toHexString(err));
-            }
-
-            compileShader(gl, shader);
-            err = gl.glGetError(); 
-            if(err!=GL.GL_NO_ERROR && null!=verboseOut) {
-                verboseOut.println("createAndCompileShader: CompileShader failed, GL Error: 0x"+Integer.toHexString(err));
-            }
-
-            return isShaderStatusValid(gl, shader, GL2ES2.GL_COMPILE_STATUS, verboseOut) && err == GL.GL_NO_ERROR;
-        }
-
+        return data;
     }
-
-    public static String getShaderInfoLog(GL gl, int shaderObj) {
-        return getImpl(gl).getShaderInfoLog(gl, shaderObj);
-    }
-
-    public static String getProgramInfoLog(GL gl, int programObj) {
-        return getImpl(gl).getProgramInfoLog(gl, programObj);
-    }
-
-    public static boolean isShaderStatusValid(GL gl, int shaderObj, int name) {
-        return getImpl(gl).isShaderStatusValid(gl, shaderObj, name);
-    }
-
-    public static boolean isShaderStatusValid(GL gl, int shaderObj, int name, PrintStream verboseOut) {
-        return getImpl(gl).isShaderStatusValid(gl, shaderObj, name, verboseOut);
-    }
-
-    public static boolean isShaderStatusValid(GL gl, IntBuffer shaders, int name) {
-        return getImpl(gl).isShaderStatusValid(gl, shaders, name);
-    }
-
-    public static boolean isShaderStatusValid(GL gl, IntBuffer shaders, int name, PrintStream verboseOut) {
-        return getImpl(gl).isShaderStatusValid(gl, shaders, name, verboseOut);
-    }
-
-    public static boolean isProgramStatusValid(GL gl, int programObj, int name) {
-        return getImpl(gl).isProgramStatusValid(gl, programObj, name);
-    }
-
-    public static boolean isProgramValid(GL gl, int programObj) {
-        return getImpl(gl).isProgramValid(gl, programObj);
-    }
-
-    public static boolean isProgramValid(GL gl, int programObj, PrintStream verboseOut) {
-        return getImpl(gl).isProgramValid(gl, programObj, verboseOut);
-    }
-
-    public static void createShader(GL gl, int type, IntBuffer shaders) {
-        getImpl(gl).createShader(gl, type, shaders);
-    }
-
-    public static Set<Integer> getShaderBinaryFormats(GL gl) {
-        return getImpl(gl).getShaderBinaryFormats(gl);
-    }
-
-    public static boolean isShaderCompilerAvailable(GL gl) {
-        return getImpl(gl).isShaderCompilerAvailable(gl);
-    }
-
-    public static void shaderSource(GL gl, int shader, java.lang.String[] source) {
-        getImpl(gl).shaderSource(gl, shader, source);
-    }
-
-    public static void shaderSource(GL gl, IntBuffer shaders, java.lang.String[][] sources) {
-        getImpl(gl).shaderSource(gl, shaders, sources);
-    }
-
-    public static void shaderBinary(GL gl, IntBuffer shaders, int binFormat, java.nio.Buffer bin) {
-        getImpl(gl).shaderBinary(gl, shaders, binFormat, bin);
-    }
-
-    public static void compileShader(GL gl, IntBuffer shaders) {
-        getImpl(gl).compileShader(gl, shaders);
-    }
-
-    public static void attachShader(GL gl, int program, IntBuffer shaders) {
-        getImpl(gl).attachShader(gl, program, shaders);
-    }
-
-    public static void detachShader(GL gl, int program, IntBuffer shaders) {
-        getImpl(gl).detachShader(gl, program, shaders);
-    }
-
-    public static void deleteShader(GL gl, IntBuffer shaders) {
-        getImpl(gl).deleteShader(gl, shaders);
-    }
-
-    public static boolean createAndLoadShader(GL gl, IntBuffer shader, int shaderType,
-                                              int binFormat, java.nio.Buffer bin,
-                                              PrintStream verboseOut) {
-        return getImpl(gl).createAndLoadShader(gl, shader, shaderType, binFormat, bin, verboseOut);
-    }
-
-    public static boolean createAndCompileShader(GL gl, IntBuffer shader, int shaderType,
-                                                 java.lang.String[][] sources, 
-                                                 PrintStream verboseOut) {
-        return getImpl(gl).createAndCompileShader(gl, shader, shaderType, sources, verboseOut);
-    }
-
-    private static Impl getImpl(GL _gl) {
-        GL2ES2 gl = _gl.getGL2ES2();
-        GLContext context = gl.getContext();
-        Impl impl = (Impl) context.getAttachedObject(implObjectKey);
-        if (impl == null) {
-            impl = new GL2ES2Impl();
-            context.attachObject(implObjectKey, impl);
-        }
-        return impl;
-    }
-    private static final String implObjectKey = "jogamp.opengl.glsl.ShaderUtilImpl" ;
 }
