@@ -28,7 +28,7 @@ import jogamp.graph.font.typecast.ot.table.CffTable;
  * @author <a href="mailto:davidsch@dev.java.net">David Schweinsberg</a>
  */
 public class CharstringType2 extends Charstring {
-    
+
     private static final String[] _oneByteOperators = {
         "-Reserved-",
         "hstem",
@@ -105,25 +105,25 @@ public class CharstringType2 extends Charstring {
         "flex1",
         "-Reserved-"
     };
-    
-    private int _index;
-    private String _name;
-    private int[] _data;
-    private int _offset;
-    private int _length;
-    private CffTable.Index _localSubrIndex;
-    private CffTable.Index _globalSubrIndex;
+
+    private final int _index;
+    private final String _name;
+    private final int[] _data;
+    private final int _offset;
+    private final int _length;
+    private final CffTable.Index _localSubrIndex;
+    private final CffTable.Index _globalSubrIndex;
     private int _ip;
 
     /** Creates a new instance of CharstringType2 */
     protected CharstringType2(
-            int index,
-            String name,
-            int[] data,
-            int offset,
-            int length,
-            CffTable.Index localSubrIndex,
-            CffTable.Index globalSubrIndex) {
+            final int index,
+            final String name,
+            final int[] data,
+            final int offset,
+            final int length,
+            final CffTable.Index localSubrIndex,
+            final CffTable.Index globalSubrIndex) {
         _index = index;
         _name = name;
         _data = data;
@@ -132,16 +132,18 @@ public class CharstringType2 extends Charstring {
         _localSubrIndex = localSubrIndex;
         _globalSubrIndex = globalSubrIndex;
     }
-    
+
+    @Override
     public int getIndex() {
         return _index;
     }
 
+    @Override
     public String getName() {
         return _name;
     }
-    
-    private void disassemble(StringBuffer sb) {
+
+    private void disassemble(final StringBuilder sb) {
         Number operand = null;
         while (isOperandAtIndex()) {
             operand = nextOperand();
@@ -151,7 +153,7 @@ public class CharstringType2 extends Charstring {
         String mnemonic;
         if (operator == 12) {
             operator = nextByte();
-            
+
             // Check we're not exceeding the upper limit of our mnemonics
             if (operator > 38) {
                 operator = 38;
@@ -162,13 +164,13 @@ public class CharstringType2 extends Charstring {
         }
         sb.append(mnemonic);
     }
-    
+
     public void resetIP() {
         _ip = _offset;
     }
 
     public boolean isOperandAtIndex() {
-        int b0 = _data[_ip];
+        final int b0 = _data[_ip];
         if ((32 <= b0 && b0 <= 255) || b0 == 28) {
             return true;
         }
@@ -176,55 +178,56 @@ public class CharstringType2 extends Charstring {
     }
 
     public Number nextOperand() {
-        int b0 = _data[_ip];
+        final int b0 = _data[_ip];
         if (32 <= b0 && b0 <= 246) {
 
             // 1 byte integer
             ++_ip;
-            return new Integer(b0 - 139);
+            return Integer.valueOf(b0 - 139);
         } else if (247 <= b0 && b0 <= 250) {
 
             // 2 byte integer
-            int b1 = _data[_ip + 1];
+            final int b1 = _data[_ip + 1];
             _ip += 2;
-            return new Integer((b0 - 247) * 256 + b1 + 108);
+            return Integer.valueOf((b0 - 247) * 256 + b1 + 108);
         } else if (251 <= b0 && b0 <= 254) {
 
             // 2 byte integer
-            int b1 = _data[_ip + 1];
+            final int b1 = _data[_ip + 1];
             _ip += 2;
-            return new Integer(-(b0 - 251) * 256 - b1 - 108);
+            return Integer.valueOf(-(b0 - 251) * 256 - b1 - 108);
         } else if (b0 == 28) {
 
             // 3 byte integer
-            int b1 = _data[_ip + 1];
-            int b2 = _data[_ip + 2];
+            final int b1 = _data[_ip + 1];
+            final int b2 = _data[_ip + 2];
             _ip += 3;
-            return new Integer(b1 << 8 | b2);
+            return Integer.valueOf(b1 << 8 | b2);
         } else if (b0 == 255) {
 
             // 16-bit signed integer with 16 bits of fraction
-            int b1 = (byte) _data[_ip + 1];
-            int b2 = _data[_ip + 2];
-            int b3 = _data[_ip + 3];
-            int b4 = _data[_ip + 4];
+            final int b1 = (byte) _data[_ip + 1];
+            final int b2 = _data[_ip + 2];
+            final int b3 = _data[_ip + 3];
+            final int b4 = _data[_ip + 4];
             _ip += 5;
-            return new Float((b1 << 8 | b2) + ((b3 << 8 | b4) / 65536.0));
+            return Float.valueOf((b1 << 8 | b2) + ((b3 << 8 | b4) / 65536f));
         } else {
             return null;
         }
     }
-    
+
     public int nextByte() {
         return _data[_ip++];
     }
-    
+
     public boolean moreBytes() {
         return _ip < _offset + _length;
     }
-    
+
+    @Override
     public String toString() {
-        StringBuffer sb = new StringBuffer();
+        final StringBuilder sb = new StringBuilder();
         resetIP();
         while (moreBytes()) {
             disassemble(sb);
