@@ -1,22 +1,22 @@
 /*
  * Copyright (c) 2003 Sun Microsystems, Inc. All Rights Reserved.
  * Copyright (c) 2010 JogAmp Community. All rights reserved.
- * 
+ *
  * Redistribution and use in source and binary forms, with or without
  * modification, are permitted provided that the following conditions are
  * met:
- * 
+ *
  * - Redistribution of source code must retain the above copyright
  *   notice, this list of conditions and the following disclaimer.
- * 
+ *
  * - Redistribution in binary form must reproduce the above copyright
  *   notice, this list of conditions and the following disclaimer in the
  *   documentation and/or other materials provided with the distribution.
- * 
+ *
  * Neither the name of Sun Microsystems, Inc. or the names of
  * contributors may be used to endorse or promote products derived from
  * this software without specific prior written permission.
- * 
+ *
  * This software is provided "AS IS," without a warranty of any kind. ALL
  * EXPRESS OR IMPLIED CONDITIONS, REPRESENTATIONS AND WARRANTIES,
  * INCLUDING ANY IMPLIED WARRANTY OF MERCHANTABILITY, FITNESS FOR A
@@ -29,11 +29,11 @@
  * DAMAGES, HOWEVER CAUSED AND REGARDLESS OF THE THEORY OF LIABILITY,
  * ARISING OUT OF THE USE OF OR INABILITY TO USE THIS SOFTWARE, EVEN IF
  * SUN HAS BEEN ADVISED OF THE POSSIBILITY OF SUCH DAMAGES.
- * 
+ *
  * You acknowledge that this software is not designed or intended for use
  * in the design, construction, operation or maintenance of any nuclear
  * facility.
- * 
+ *
  * Sun gratefully acknowledges that this software was originally authored
  * and developed by Kenneth Bradley Russell and Christopher John Kline.
  */
@@ -47,8 +47,10 @@ import java.lang.reflect.Method;
 import java.security.AccessController;
 import java.security.PrivilegedAction;
 
-import javax.media.nativewindow.AbstractGraphicsConfiguration;
-import javax.media.nativewindow.awt.AWTGraphicsConfiguration;
+import com.jogamp.nativewindow.AbstractGraphicsConfiguration;
+
+import com.jogamp.nativewindow.awt.AWTGraphicsConfiguration;
+
 
 /** This class encapsulates the reflection routines necessary to peek
     inside a few data structures in the AWT implementation on X11 for
@@ -63,6 +65,7 @@ public class Win32SunJDKReflection {
 
   static {
     AccessController.doPrivileged(new PrivilegedAction() {
+        @Override
         public Object run() {
           try {
             win32GraphicsDeviceClass = Class.forName("sun.awt.Win32GraphicsDevice");
@@ -72,7 +75,7 @@ public class Win32SunJDKReflection {
             win32GraphicsConfigGetVisualMethod = win32GraphicsConfigClass.getDeclaredMethod("getVisual", new Class[] {});
             win32GraphicsConfigGetVisualMethod.setAccessible(true);
             initted = true;
-          } catch (Exception e) {
+          } catch (final Exception e) {
             // Either not a Sun JDK or the interfaces have changed since 1.4.2 / 1.5
           }
           return null;
@@ -80,37 +83,37 @@ public class Win32SunJDKReflection {
       });
   }
 
-  public static GraphicsConfiguration graphicsConfigurationGet(GraphicsDevice device, int pfdID) {
+  public static GraphicsConfiguration graphicsConfigurationGet(final GraphicsDevice device, final int pfdID) {
     if (!initted) {
       return null;
     }
 
     try {
-      return (GraphicsConfiguration) win32GraphicsConfigGetConfigMethod.invoke(null, new Object[] { device, new Integer(pfdID) });
-    } catch (Exception e) {
+      return (GraphicsConfiguration) win32GraphicsConfigGetConfigMethod.invoke(null, new Object[] { device, Integer.valueOf(pfdID) });
+    } catch (final Exception e) {
       return null;
     }
   }
 
-  public static int graphicsConfigurationGetPixelFormatID(AbstractGraphicsConfiguration config) {
+  public static int graphicsConfigurationGetPixelFormatID(final AbstractGraphicsConfiguration config) {
       try {
           if (config instanceof AWTGraphicsConfiguration) {
               return graphicsConfigurationGetPixelFormatID(((AWTGraphicsConfiguration) config).getAWTGraphicsConfiguration());
           }
           return 0;
-      } catch (Exception e) {
+      } catch (final Exception e) {
           return 0;
       }
   }
 
-  public static int graphicsConfigurationGetPixelFormatID(GraphicsConfiguration config) {
+  public static int graphicsConfigurationGetPixelFormatID(final GraphicsConfiguration config) {
     if (!initted) {
       return 0;
     }
 
     try {
       return ((Integer) win32GraphicsConfigGetVisualMethod.invoke(config, (Object[])null)).intValue();
-    } catch (Exception e) {
+    } catch (final Exception e) {
       return 0;
     }
   }
